- uk editor 고도화 작업

--- a/assets/lib/css/less/layout.less
+++ b/assets/lib/css/less/layout.less
@@ -1664,7 +1664,7 @@
 			max-width:1400px; margin:0 auto; padding:0 @pc_padding;
 			text-align:left;
 			//.uk_editor {margin-top:calc(5% + 20px); border-width:6px;}
-			.uk_editor {margin-top:calc(5% + 10px); border-width:6px;}
+			.uk_editor {margin-top:calc(5% + 10px); /*border-width:6px;*/}
 		}
 	}
 	.device .main_editor .info_txt {display:none !important;}
@@ -1724,7 +1724,7 @@
 
 			.editor_wrap {
 				padding:0 15px;
-				.uk_editor {margin-top:40px; border-width:2px;}
+				.uk_editor {margin-top:40px; /*border-width:2px;*/}
 			}
 
 		}
@@ -3198,10 +3198,6 @@
 			p {line-height:20px; font-size:18px;}
 		}
 	}
-
-
-
-//sub content ----------------------------------------------------------------------------------------//
 
 
 
