--- a/assets/lib/css/less/common.less
+++ b/assets/lib/css/less/common.less
@@ -540,6 +540,7 @@ mark {
 			@p_size:15px;
 			position:fixed; right:@p_size; top:@p_size; z-index:9999;
 			width:calc(100% - (@p_size*2)); height:calc(100% - (@p_size*2)); margin:0 !important;
+			//border-width:4px;
 			box-shadow:0 0 0 50px rgba(0,0,0,.7);
 
 			.code_wrap, .CodeMirror {height:100%;}
