- 전급성 페이지 생성

--- a/assets/lib/css/less/layout.less
+++ b/assets/lib/css/less/layout.less
@@ -2036,6 +2036,7 @@
 			letter-spacing:-0.2px;
 		}
 		.top_info ul {
+			max-width:900px;
 			text-align:left;
 			margin-top:15px; padding:13px 18px;
 			background:#f3f3f3;
