- 전급성 페이지 생성

--- a/assets/lib/css/less/layout.less
+++ b/assets/lib/css/less/layout.less
@@ -752,7 +752,9 @@
 				margin:20px 10px 0; padding:@d2_pd;
 				line-height:20px;
 				font-size:14px; font-weight:400;
-				background:fade(#fff, 7%); border-radius:3px;
+				//background:fade(#fff, 7%);
+				background:rgba(0,0,0,.5);
+				border-radius:3px;
 				&:before {left:@d2_pd; top:@d2_pd;}
 				> a {padding-left:18px; color:#fff;}
 				&:hover {
