--- a/assets/lib/css/less/layout.less
+++ b/assets/lib/css/less/layout.less
@@ -753,7 +753,7 @@
 				line-height:20px;
 				font-size:14px; font-weight:400;
 				//background:fade(#fff, 7%);
-				background:rgba(0,0,0,.5);
+				//background:rgba(0,0,0,.5);
 				border-radius:3px;
 				&:before {left:@d2_pd; top:@d2_pd;}
 				> a {padding-left:18px; color:#fff;}
@@ -820,6 +820,8 @@
 		}
 		.assetsLink_btn {z-index:99999;}
 	}
+	.main_page .al_depth2 > li {background:rgba(255,255,255,.07);}
+	.sub_page .al_depth2 > li {background:rgba(0,0,0,.5);}
 	@media(max-width:@screen-sm-max){
 		.hd_assetsLink {
 			.assetsLink_in {
