--- a/assets/lib/css/less/layout.less
+++ b/assets/lib/css/less/layout.less
@@ -78,6 +78,8 @@
 		transition:opacity .4s, left 0s 0s, top 0s 0s; //로딩 시작
 		&.hide_loading {left:-9999vw; top:-9999vw; opacity:0; transition:opacity .5s, left 0s .5s, top 0s .5s;} //로딩 끝
 		&.uxkm_start.hide_loading {transition:opacity .8s, left 0s .8s, top 0s .8s;}
+
+		/*
 		&:not(.hide_loading) {
 			will-change:opacity;
 			.loading_rorate.bg1, .loading_rorate.bg2 {
@@ -89,6 +91,7 @@
 				.dot {will-change:width, height, background-color, box-shadow;}
 			}
 		}
+		*/
 
 		.loading_wrap {
 			position:absolute; left:50%; top:50%; transform:translate(-50%, -50%);
@@ -684,8 +687,11 @@
 		overflow-y:scroll;
 		left:0; top:0;
 		background-color:rgba(0,0,0,.9);
-		will-change:background-color;
-		.inner {opacity:1; transform:scale(1,1); will-change:transform, opacity;}
+		//will-change:background-color;
+		.inner {
+			opacity:1; transform:scale(1,1);
+			//will-change:transform, opacity;
+		}
 	}
 
 	//assetsLink 디자인
@@ -821,7 +827,8 @@
 		.assetsLink_btn {z-index:99999;}
 	}
 	.main_page .al_depth2 > li {background:rgba(255,255,255,.07);}
-	.sub_page .al_depth2 > li {background:rgba(0,0,0,.5);}
+	.desktop.sub_page .al_depth2 > li {background:rgba(0,0,0,.5);}
+	.device.sub_page .al_depth2 > li {background:rgba(255,255,255,.07);}
 	@media(max-width:@screen-sm-max){
 		.hd_assetsLink {
 			.assetsLink_in {
@@ -1459,7 +1466,8 @@
 				transition:width .4s ease-in-out;
 			}
 			span i:before {
-				position:absolute; left:50%; top:50%; transform:translate(-50%, -50%); opacity:0;
+				position:absolute; left:50%; top:50%; transform:translate(-50%, -50%);
+				opacity:0; //------ 애니메이션 과부하
 				width:100%; height:calc(100% + 600px);
 				background-repeat:no-repeat;
 				background-position:center center;
@@ -1499,7 +1507,9 @@
 			.step5 i {.keyboardStep(keyStep5, .4%, 5.8s);}
 		}
 		&.info_scroll .keyboard {
-			.step i, .step i:before {will-change:transform;}
+			//.step, .step i {will-change:transform;}
+			//------ 애니메이션 과부하
+			//.step i:before {will-change:transform, opacity;}
 			.step1 i:before {.keyboardBg(keyBg1, 1.7s, .48s);}
 			.step2 i:before {.keyboardBg(keyBg2, 1.7s, .36s);}
 			.step3 i:before {.keyboardBg(keyBg3, 1.7s, .24s);}
@@ -1961,7 +1971,8 @@
 		position:absolute; left:@pc_padding; right:@pc_padding; top:40px; z-index:3;
 		padding:0;
 		font-size:0; background:#fff; box-shadow:none;
-		transition:opacity .3s; opacity:1;
+		transition:opacity .3s;
+		opacity:1;
 		li {
 			display:inline-block; position:relative; padding-left:3px;
 			&:before {
@@ -2010,10 +2021,14 @@
 			display:block; height:1px;
 			ul {.top_link_css;}
 			ul.fixed {
-				position:fixed; left:auto; right:@pc_padding + 4px; top:@hdHeight; z-index:4;
+				position:fixed;
+				left:auto;
+				//right:@pc_padding + 4px;
+				right:86.5px;
+				top:@hdHeight; z-index:4;
 				padding:0 5px;
 				box-shadow:0 0 0 4px #e9e9e9;
-				&.opacity_on {opacity:0;}
+				&.opacity_on {opacity:0; margin-right:17px;}
 				&:before {
 					display:none;
 					.font-en; font-size:16px; color:@navy;
@@ -2089,6 +2104,7 @@
 
 			.top_link {
 				ul, ul.fixed {.top_link_css;}
+				ul.fixed.opacity_on {margin-right:0;}
 			}
 		}
 	}
@@ -2406,7 +2422,6 @@
 		h4 {line-height:24px; font-size:16px; color:fade(@navy, 90%); letter-spacing:-0.3px;}
 		h5 {line-height:22px; font-size:15px; color:fade(@navy, 90%); letter-spacing:-0.3px;/* .weight-500;*/}
 		h6 {line-height:22px; font-size:14px; color:fade(@navy, 90%); letter-spacing:-0.3px;}
-
 		//heading line-height, font-size
 		h2 {line-height:32px; font-size:22px;}
 		h2.ve_tit:before {font-size:20px; margin-top:1px;}
