- gulp 내용 업데이트

--- a/assets/lib/css/less/common.less
+++ b/assets/lib/css/less/common.less
@@ -2,6 +2,7 @@
 @import "media_size";
 
 
+
 //font
 .font-kr {font-family:'Noto Sans KR', 'Malgun Gothic', 'Dotum',  sans-serif;}
 .font-en {font-family:'Open Sans', 'Noto Sans KR', 'Malgun Gothic', 'Dotum', sans-serif;}
@@ -37,7 +38,7 @@ a, a:hover, a:active, a:focus {text-decoration:none; vertical-align:top;}
 	overflow:hidden; display:inline-block; position:absolute !important; margin:-1px; width:1px; height:1px;
 	border:0; line-height:1; clip:rect(1px, 1px, 1px, 1px); clip-path:inset(50%);
 }
-img {height:auto; border:0; vertical-align:top;}
+img {max-width:100%; height:auto; border:0; vertical-align:top;}
 button {margin:0; padding:0; border:0; background:none; vertical-align:top; cursor:pointer;}
 textarea, input, select {vertical-align:top;}
 * {-webkit-text-size-adjust:none} /* 아이폰 가로모드 텍스트 크기 조정 */
