--- a/assets/lib/css/less/uk.less
+++ b/assets/lib/css/less/uk.less
@@ -2863,7 +2863,7 @@
 		margin-top:15px;
 		border:1px solid @border_color; border-radius:5px;
 		background:#fff;
-
+		/*
 		&[data-filename] {
 			&:before {
 				display:inline-block; vertical-align:top;
@@ -2872,6 +2872,43 @@
 				color:#fff; .font-code;
 				background:@skyBlue; border-radius:3px;
 				content:attr(data-filename);
+			}
+		}
+		*/
+
+		.file_name_box {
+			display:flex;
+			justify-content:space-between;
+			position:relative;
+			padding:10px 15px 10px 10px;
+			border-bottom:1px solid @border_color;
+			* {vertical-align:top;}
+
+			.file_name {
+				position:relative;
+				height:26px; line-height:26px; padding:0 25px 0 10px;
+				font-size:16px;
+				color:#fff; .font-code;
+				background:@skyBlue; border-radius:3px;
+				span {
+					position:absolute; right:10px; top:50%; transform:translate(0, -50%);
+					height:0;
+					font-size:0; text-indent:-9999px;
+					border-bottom:6px solid #fff;
+					border-left:4px solid transparent;
+					border-right:4px solid transparent;
+					content:"";
+				}
+				&.on {
+					//background:#999;
+					span {
+						transform:translate(0, -50%) rotate(180deg);
+					}
+				}
+			}
+			.view_full_layer {
+				.font-code; letter-spacing:-0.4px; //text-decoration:underline;
+				&:hover {text-decoration:underline;}
 			}
 		}
 
@@ -2954,16 +2991,62 @@
 
 		&.tab_line_remove .tab_indent_line {display:none !important;}
 	}
+	.uk_gist_code_layer {
+		visibility:hidden;
+		position:fixed; left:-99999px; top:-99999px;
+		width:100vw; height:100vh;
+		z-index:99999;
+		background:rgba(0,0,0,.7);
+		&.view_show {visibility:visible; left:0; top:0;}
+
+		.uk_gist_code_box {
+			overflow:unset;
+			position:absolute; left:50%; top:50%; transform:translate(-50%, -50%);
+			max-width:90%; width:1200px; margin:0;
+			.uk_gist_content {
+				max-height:80vh; overflow-y:auto;
+			}
+
+			.code_layer_close {
+				position:absolute; right:0; top:0;
+				//width:80px; height:70px; margin:-12px -10px 0 0;
+				width:56px; height:100%;
+				//background:rgba(255,0,0,.3);
+				i {
+					font-size:0; text-indent:-9999px;
+					position:absolute; left:50%; top:50%; transform:translate(-50%, -50%);
+					width:2px; height:26px;
+					&:before, &:after {
+						position:absolute; left:50%; top:50%;
+						width:100%; height:100%;
+						background:#444;
+						content:"";
+					}
+					&:before {transform:translate(-50%, -50%) rotate(45deg);}
+					&:after {transform:translate(-50%, -50%) rotate(-45deg);}
+				}
+			}
+		}
+	}
 	@media(max-width:@screen-sm-max){
 		.uk_gist_code_box {
 			@line_size:36px;
 			@pd_top: 8px;
-
+			/*
 			&[data-filename] {
 				&:before {
 					height:22px; line-height:20px; margin:6px 0 0 6px; padding:0 6px;
 					font-size:12px;
 				}
+			}
+			*/
+
+			.file_name_box {
+				.file_name {
+					padding:0 22px 0 7px; font-size:13px;
+					span {right:8px}
+				}
+				.view_full_layer {font-size:12px;}
 			}
 
 			.uk_gist_content {
@@ -2984,6 +3067,20 @@
 					font-size:10px;
 				}
 				.hyphen {padding:0;}
+			}
+		}
+		.uk_gist_code_layer {
+			.uk_gist_code_box {
+				top:30px; transform:translate(-50%, 0);
+				max-width:calc(100vw - 30px);
+				.uk_gist_content {
+					max-height:66vh;
+				}
+
+				.code_layer_close {
+					width:50px; height:100%;
+					i {height:26px;}
+				}
 			}
 		}
 	}
