- gulp html include 완료

--- a/assets/lib/css/github-gist.css
+++ b/assets/lib/css/github-gist.css
@@ -114,6 +114,10 @@
 .uk_color_nn,
 .uk_color_nn .hljs-comment {color:green !important;}
 
+.all_black .uk_gist_code_wrap *:not(.hljs-comment) {
+    color:#222 !important;
+}
+
 
 
 
