- gulp nunjucksRender 내용 정리 중

--- a/assets/lib/css/less/uk.less
+++ b/assets/lib/css/less/uk.less
@@ -2895,6 +2895,7 @@
 				&.toggle_btn {
 					padding-right:25px;
 				}
+				i {font-size:13px;}
 				span {
 					position:absolute; right:10px; top:50%; transform:translate(0, -50%);
 					height:0;
